Made full refactoring of the code. Added Utils class.